--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        swift: ["5.1", "4.2.1"]
+        swift: ["5.1", "4.2."]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: fwal/setup-swift@v1
