--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,8 +7,8 @@ jobs:
     name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        swift: ["5.1", "4.2."]
+        os: [macos-latest]
+        swift: ["5.1.0", "4.2.4"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: fwal/setup-swift@v1
