--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
-        swift: ["5.2", "4.2.4"]
+        swift: ["5.3.3"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: fwal/setup-swift@v1
