--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
-        swift: ["5.3.3"] # test on one
+        swift: ["5.1.0", "4.2.1"] # test on two macos
     runs-on: ${{ matrix.os }}
     steps:
       - uses: fwal/setup-swift@v1
